Fix MathJax visibility on dark theme

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,12 @@ body {
     font-size: 18px;
 }
 
+h2, h3 {
+    margin-top: 3rem !important;
+    margin-bottom: 1.5rem !important;
+    color: #000 !important;
+}
+
 .container-lg {
     max-width: 820px !important; /* Largura ideal para o olho não se perder */
     margin: 0 auto;
